infra/k8s-prod/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    # note: you have to map ticketing.dev to minikube ip in /etc/hosts
    # example: 192.168.49.2    ticketing.dev
    # note: to disable chrome ssl protection, just type 'thisisunsafe' in chrome
    - host: evolunta.com
      http:
        paths:
          # route for the auth microservice
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          # route for the payments microservice
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-srv
              servicePort: 3000
          # route for the tickets microservice
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-srv
              servicePort: 3000
          # route for the orders service
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-srv
              servicePort: 3000
          # route for the web client
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
